# AnsysAutomatizationProject

./: .gitignore  pyproject.toml
ansys_api/: admin.py  apps.py  executor.py  models.py  regex.py  services.py
ansys_api/migrations/: 0001_initial.py  0002_graph.py
core/: settings.py  urls.py
