[project]
name = "ansys-executor"
version = "0.1.0"
description = ""
authors = [
    {name = "Salimzyanov Lenar",email = "salimzyanov_lenar@mail.ru"}
]
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.2,<7.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
